# cloudcat

./: .bumpversion.cfg  .gitignore  .mailmap  AGENTS.md  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: cloudcat
.github/workflows/: build-homebrew.yml  bump-release.yml  bump-version.yml  deploy-docs.yml  publish.yml  test-publish.yml  tests.yml
Formula/: cloudcat.rb
cloudcat/: __init__.py  cli.py  completion.py  compression.py  config.py  filtering.py  formatters.py  progress.py  user_config.py
cloudcat/data/: SKILL.md
cloudcat/readers/: __init__.py  avro.py  csv.py  json.py  orc.py  parquet.py  text.py
cloudcat/storage/: __init__.py  azure.py  base.py  gcs.py  local.py  s3.py
cloudcat/streaming/: filesystems.py  stats.py  tracking.py
cloudcat/tables/: __init__.py  delta.py  iceberg.py  pushdown.py
docs/: CNAME  build.js  index.html  package-lock.json  package.json  robots.txt  sitemap.xml  template.html
docs/content/: agents.md  authentication.md  command-reference.md  contributing.md  directory-operations.md  features.md  installation.md  output-formats.md  performance.md  quickstart.md  roadmap.md  tables.md  troubleshooting.md  use-cases.md  where-operators.md
docs/css/: style.css
docs/js/: main.js
examples/: make_sample_tables.py
packaging/homebrew/: cloudcat.rb.template
packaging/pyinstaller/: cloudcat.spec  entry.py
packaging/pyinstaller/hooks/: hook-cloudcat.py
scripts/: build-standalone.sh
skills/cloudcat/: SKILL.md
tests/: test_bugfix_round2.py  test_cli.py  test_cli_features.py  test_completion.py  test_compression.py  test_config_stats_completion.py  test_data_reading.py  test_file_filtering.py  test_format_detection.py  test_import_lightness.py  test_integration.py  test_output_formatting.py  test_path_parsing.py  test_r2_endpoint.py  test_read_data_streaming.py  test_readers_roundtrip.py  test_regressions.py  test_skill_install.py  test_storage_listing.py  test_streaming_stats.py  test_tables.py  test_tracking.py  test_v05_features.py  test_v062_fixes.py  test_visual_output.py
