[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudcat"
dynamic = ["version"]
description = "Preview and analyze data files in Google Cloud Storage, AWS S3, and Azure Data Lake Storage Gen2 from your terminal"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jonathan Sudhakar" }]
keywords = [
    "cloud", "gcs", "s3", "azure", "cli", "storage", "data", "parquet", "csv",
    "json", "avro", "orc", "google-cloud", "aws", "adls", "datalake",
    "data-engineering", "etl", "spark", "bigquery", "databricks", "kafka", "hive",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "tabulate>=0.8.9",
    "colorama>=0.4.4",
    # Cloud providers (included by default)
    "google-cloud-storage>=2.0.0",
    "boto3>=1.18.0",
    "azure-storage-file-datalake>=12.0.0",
    "azure-storage-blob>=12.0.0",
    "azure-identity>=1.0.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=5.0.0"]
avro = ["fastavro>=1.4.0"]
orc = ["pyarrow>=5.0.0"]
zstd = ["zstandard>=0.15.0"]
lz4 = ["lz4>=3.0.0"]
snappy = ["python-snappy>=0.6.0"]
compression = ["zstandard>=0.15.0", "lz4>=3.0.0", "python-snappy>=0.6.0"]
all = [
    "pyarrow>=5.0.0",
    "fastavro>=1.4.0",
    "zstandard>=0.15.0",
    "lz4>=3.0.0",
    "python-snappy>=0.6.0",
]
test = ["pytest>=6.0.0", "pytest-mock>=3.6.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-mock>=3.6.0",
    "moto>=4.0.0",
    "build",
    "twine",
]

[project.scripts]
cloudcat = "cloudcat.cli:main"

[project.urls]
Homepage = "https://github.com/jonathansudhakar1/cloudcat"
Documentation = "https://cloudcatcli.com"
"Bug Reports" = "https://github.com/jonathansudhakar1/cloudcat/issues"
Source = "https://github.com/jonathansudhakar1/cloudcat"

[tool.setuptools]
packages = ["cloudcat", "cloudcat.readers", "cloudcat.storage", "cloudcat.streaming"]

[tool.setuptools.dynamic]
version = { attr = "cloudcat.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
